2008-06-11  Glenn Morris  <rgm@gnu.org>

	* gnus-util.el (x-focus-frame):
	* gnus.el (image-size):
	* mm-decode.el (image-size): Declare.

	* gnus-picon.el (declare-function): Add compat definition.
	(image-size): Declare.

	* gnus-group.el (tool-bar-map):
	* gnus-sum.el (tool-bar-map): Define for compiler.

	* gnus-ems.el (gnus-x-splash): Check tool-bar-mode is bound.

	* nnfolder.el (gnus-intersection): Remove unnecessary autoload.

	* gnus-agent.el, gnus-cache.el, gnus-ems.el, gnus-group.el:
	* gnus-logic.el, gnus-msg.el, gnus-util.el, gnus.el, mail-source.el:
	* message.el, mm-decode.el, mm-encode.el, mm-view.el, mml.el:
	* mml1991.el, mml2015.el, nnfolder.el, nnheader.el, nnimap.el:
	* nnmail.el, nnml.el, nnrss.el, nntp.el, nnvirtual.el:
	* sieve-manage.el, spam-report.el, spam.el:
	Remove unnecessary eval-and-compile of autoloads.

2008-06-08  Michael Albinus  <michael.albinus@gmx.de>

	* auth-source.el: Precise Tramp doc.

2008-06-07  Glenn Morris  <rgm@gnu.org>

	* nnmairix.el: Remove unnecessary eval-when-compile.

2008-06-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind propertize for XEmacs 21.4.

2008-06-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnir.el: Move here from ../contrib.

2008-06-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-util.el (gnus-read-shell-command): New function.
	* mm-decode.el (mm-pipe-part):
	* gnus-art.el (gnus-summary-save-in-pipe): Use it.

2008-06-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-disassociate-draft): Revert 2008-03-18 change.

2008-06-03  Glenn Morris  <rgm@gnu.org>

       * pop3.el (nnheader-accept-process-output): Autoload it.

2008-05-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* rfc2231.el (rfc2231-decode-encoded-string): Don't decode things that
	are not 2-digit hexadecimal characters that follow `%'s.

2008-05-29  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-bogus-recipient-p): Fix type in doc string.
	Reported by Stephen Eglen <S.J.Eglen@damtp.cam.ac.uk>.